force-app/main/default/objects/PKCEHelper__c/PKCEHelper__c.object-meta.xml
<CustomObject>
    <label>PKCE Helper</label>
    <nameField>
        <displayFormat>PKCE-{00000}</displayFormat>
        <label>PKCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKCE Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>