force-app/main/default/objects/PKCEHelper__c/fields/code_challenge__c.field-meta.xml
<CustomField>
    <fullName>code_challenge__c</fullName>
    <label>code_challenge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>