force-app/main/default/objects/PKCEHelper__c/fields/code_verifier__c.field-meta.xml
<CustomField>
    <fullName>code_verifier__c</fullName>
    <label>code_verifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>