force-app/main/default/objects/PKCEHelper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>code_challenge__c</columns>
    <columns>code_verifier__c</columns>
    <columns>Active__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>